authorities added using user role while returning authentication object